--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "firebase": "^10.12.2",
     "helmet": "^7.1.0",
     "localforage": "^1.10.0",
@@ -21,6 +22,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.27.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.4"
   },
