--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.13.9",
     "animate.css": "^4.1.1",
-    "firebase": "^10.12.2",
+    "firebase": "^10.13.1",
     "helmet": "^7.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -20,10 +21,13 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
     "react-tooltip": "^5.27.1",
+    "semantic-ui-react": "^2.1.5",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.4"
   },
