--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
+    "@mui/styled-engine-sc": "^6.1.8",
     "@rive-app/react-canvas": "^4.13.9",
     "animate.css": "^4.1.1",
     "firebase": "^10.13.1",
+    "flowbite": "^2.5.2",
     "helmet": "^7.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -29,6 +35,7 @@
     "react-tooltip": "^5.27.1",
     "semantic-ui-react": "^2.1.5",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.13",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
