--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
@@ -36,6 +36,7 @@
     "semantic-ui-react": "^2.1.5",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
