--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.1.8",
     "@rive-app/react-canvas": "^4.13.9",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.9",
     "firebase": "^10.13.1",
     "flowbite": "^2.5.2",
     "helmet": "^7.1.0",
